--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
           "name": "C/C++: gcc.exe build and debug active file",
           "type": "cppdbg",
           "request": "launch",
-          "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+          "program": "${fileDirname}\\src\\main.exe",
+         // "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
           "args": [],
           "stopAtEntry": false,
           "cwd": "${fileDirname}",
